Fixed a bug with empty query as details attribute not showing headers in readonly

--- a/src/WebComponents/SizeTracker/size-tracker.less
+++ b/src/WebComponents/SizeTracker/size-tracker.less
@@ -1,6 +1,8 @@
 @import (reference) "../vidyano.less";
 
 vi-size-tracker {
+    display: block;
+    
     .resize-triggers {
         position: relative;
         visibility: hidden;
